Increase border radius of refresh offset input

--- a/public/index.html
+++ b/public/index.html
@@ -358,7 +358,7 @@
                     <div class="mb-3">
                         <label for="refreshOffset" class="form-label">Refresh Offset (Optional)</label>
                         <div class="input-group">
-                            <input type="time" class="form-control" id="timeSelect" style="padding-left: 3.5rem;">
+                            <input type="time" class="form-control" id="timeSelect" style="padding-left: 3.5rem; border-radius: 24px;">
                             <style>
                                 #timeSelect {
                                     position: relative;
