Add subtle dark background to card header

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
             --accent-color: #F43F5E;
             --light-bg: #F8FAFC;
             --dark-bg: #0F172A;
-            --card-bg: rgba(255, 255, 255, 0.9);
+            --card-bg: rgba(255, 255, 255, 0.85);
             --text-primary: #1E293B;
             --text-secondary: #64748B;
             --border-radius: 16px;
@@ -58,7 +58,7 @@
         }
 
         .card-header {
-            background: none;
+            background: rgba(0, 0, 0, 0.05);
             border-bottom: 1px solid rgba(0, 0, 0, 0.1);
             padding: 1.5rem;
             text-align: center;
