Update form labels and help text

--- a/public/index.html
+++ b/public/index.html
@@ -346,19 +346,19 @@
                         </div>
                     </div>
                     <div class="mb-3">
-                        <label for="playerId" class="form-label">Player ID</label>
+                        <label for="playerId" class="form-label">Player ID:</label>
                         <input type="text" class="form-control" id="playerId" required>
-                        <div class="form-text">A unique identifier for the player (e.g., player-123)</div>
+                        <div class="form-text">unique identifier for the player (e.g., player-123)</div>
                     </div>
                     <div class="mb-3">
-                        <label for="playerName" class="form-label">Player Name</label>
+                        <label for="playerName" class="form-label">Player Name:</label>
                         <input type="text" class="form-control" id="playerName" required>
-                        <div class="form-text">The display name for the player</div>
+                        <div class="form-text">display name for the player</div>
                     </div>
                     <div class="mb-3">
-                        <label for="playerEmail" class="form-label">Email Address (Optional)</label>
+                        <label for="playerEmail" class="form-label">Email Address (Optional):</label>
                         <input type="email" class="form-control" id="playerEmail">
-                        <div class="form-text">Player's contact email address</div>
+                        <div class="form-text">Auth0 sign-in credentials</div>
                     </div>
                     <button type="submit" class="btn btn-primary">Create Player</button>
                 </form>
