Update help text with proper capitalization

--- a/public/index.html
+++ b/public/index.html
@@ -348,12 +348,12 @@
                     <div class="mb-3">
                         <label for="playerId" class="form-label">Player ID:</label>
                         <input type="text" class="form-control" id="playerId" required>
-                        <div class="form-text">UNIQUE identifier for the player (e.g., player-123)</div>
+                        <div class="form-text">Unique identifier for the player (e.g., player-123)</div>
                     </div>
                     <div class="mb-3">
                         <label for="playerName" class="form-label">Player Name:</label>
                         <input type="text" class="form-control" id="playerName" required>
-                        <div class="form-text">DISPLAY name for the player</div>
+                        <div class="form-text">Display name for the player</div>
                     </div>
                     <div class="mb-3">
                         <label for="playerEmail" class="form-label">Email Address (Optional):</label>
