Update Player ID field to Email Address

--- a/public/index.html
+++ b/public/index.html
@@ -348,9 +348,9 @@
                         </div>
                     </div>
                     <div class="mb-3">
-                        <label for="playerId" class="form-label">Player ID:</label>
+                        <label for="playerId" class="form-label">Email Address:</label>
                         <input type="text" class="form-control" id="playerId" required>
-                        <div class="form-text">Unique identifier for the player (e.g., player-123)</div>
+                        <div class="form-text">This will be the unique ID for the player</div>
                     </div>
                     <div class="mb-3">
                         <label for="playerName" class="form-label">Player Name:</label>
