--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="Logo_Red.png">
-    <link rel="shortcut icon" type="image/png" href="Logo_Red.png">
+    <link rel="icon" type="image/png" href="./Logo_Red.png">
+    <link rel="shortcut icon" type="image/png" href="./Logo_Red.png">
     <title>GameLayer Authentication</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
@@ -371,7 +371,7 @@
                 <h1 id="authTitle">New Player Sign Up</h1>
             </div>
             <div class="card-body">
-                <form id="authForm">
+                <form id="authForm" name="authForm">
                     <div class="avatar-section" id="avatarSection">
                         <div class="avatar-preview" id="avatarPreview">
                             <div class="placeholder">
@@ -383,18 +383,18 @@
                             <label for="avatarInput" class="btn">
                                 <i class="bi bi-plus"></i>
                             </label>
-                            <input type="file" id="avatarInput" accept="image/*">
+                            <input type="file" id="avatarInput" name="avatarInput" accept="image/*">
                         </div>
                     </div>
                     <div class="mb-3">
                         <label for="email" class="form-label">Email Address:</label>
-                        <input type="email" class="form-control" id="email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
+                        <input type="email" class="form-control" id="email" name="email" required>
                         <div class="form-text">Unique player-id within GameLayer</div>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Password:</label>
                         <div class="password-field">
-                            <input type="password" class="form-control" id="password" required>
+                            <input type="password" class="form-control" id="password" name="password" required>
                             <button type="button" class="password-toggle" id="passwordToggle">
                                 <i class="bi bi-eye"></i>
                             </button>
@@ -403,7 +403,7 @@
                     </div>
                     <div class="mb-3" id="nameField">
                         <label for="playerName" class="form-label">Player Name:</label>
-                        <input type="text" class="form-control" id="playerName" required>
+                        <input type="text" class="form-control" id="playerName" name="playerName" required>
                         <div class="form-text">Display name</div>
                     </div>
                     <button type="submit" class="btn btn-primary" id="submitButton">Sign Up</button>
