--- a/public/index.html
+++ b/public/index.html
@@ -541,6 +541,9 @@
 
                 const response = await fetch(endpoint, {
                     method: 'POST',
+                    headers: {
+                        'Accept': 'application/json'
+                    },
                     body: formData
                 });
 
