--- a/public/index.html
+++ b/public/index.html
@@ -541,27 +541,31 @@
 
                 const response = await fetch(endpoint, {
                     method: 'POST',
+                    body: formData,
                     headers: {
                         'Accept': 'application/json'
-                    },
-                    body: formData
+                    }
                 });
 
                 const data = await response.json();
                 console.log('Response:', data);
 
-                if (!response.ok) {
-                    throw new Error(data.error || 'An error occurred');
+                if (data.error) {
+                    throw new Error(data.error);
                 }
 
-                // Store the authentication token
-                localStorage.setItem('authToken', data.token);
-                alert(isSignUp ? 'Account created successfully!' : 'Signed in successfully!');
-                // Redirect to dashboard or home page
-                window.location.href = '/';
+                // Store the token
+                localStorage.setItem('token', data.token);
+                
+                // Redirect to dashboard
+                if (data.redirect) {
+                    window.location.href = data.redirect;
+                } else {
+                    window.location.href = '/dashboard.html';
+                }
             } catch (error) {
                 console.error('Error:', error);
-                alert(error.message || 'An error occurred. Please try again.');
+                alert(error.message || 'An error occurred during sign in/sign up');
             }
         });
 
